; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/helix/pico/keymaps/mtei/extr_keymap.c_default_layer_state_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/helix/pico/keymaps/mtei/extr_keymap.c_default_layer_state_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current_default_layer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @default_layer_state_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = sub nsw i32 %3, 1
  store i32 %4, i32* @current_default_layer, align 4
  %5 = load i32, i32* @current_default_layer, align 4
  %6 = icmp eq i32 %5, 3
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @current_default_layer, align 4
  %9 = sub nsw i32 %8, 1
  store i32 %9, i32* @current_default_layer, align 4
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* @current_default_layer, align 4
  %12 = icmp eq i32 %11, 7
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32, i32* @current_default_layer, align 4
  %15 = sub nsw i32 %14, 4
  store i32 %15, i32* @current_default_layer, align 4
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
